Fix input type choice layout on small screens

--- a/src/app/components/modal/modal.css
+++ b/src/app/components/modal/modal.css
@@ -80,4 +80,12 @@ button.cancel {
     font-size: 1.25rem;
     top: 0.5rem;
   }
+
+  .window {
+    padding: 15px;
+  }
+
+  hr.back-showing {
+    visibility: hidden;
+  }
 }
