--- a/src/app/pages/calendar/day/time-modal/time-modal.css
+++ b/src/app/pages/calendar/day/time-modal/time-modal.css
@@ -60,3 +60,13 @@
     font-size: 1.66rem;
   }
 }
+
+@media(max-width: 320px) {
+  .choice .fa {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+}
